[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.4"
actix-web-lab = { version = "^0.20", features = ["spa"] }
dotenv = "^0.15"
mongodb = "^2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
# uuid = { version = "1.7", features = ["serde", "v4"] }
env_logger = "^0.11"
log = "^0.4"
rand = "^0.8"
common = { path = "../common" }